# maths

./: .gitignore  ATTRIBUTIONS.md  PROVENANCE_AUDIT.md  README.md  sweep_log.txt
.github/workflows/: result-packages.yml  rounding-counterexamples.yml  subtree-shuffling-counterexample.yml
2026-dgg-and-chairman-counterexamples/: AI_DISCLOSURE.md  Makefile  README.md  SUBMISSION_CHECKLIST.md  requirements.txt
2026-dgg-and-chairman-counterexamples/code/: search_chairman_family.py  verify_all.py  verify_chairman_certificate.py  verify_chairman_milp.py  verify_dgg.py
2026-dgg-and-chairman-counterexamples/data/: chairman_instance.json  (+2 more)
2026-rounding-counterexamples/: .gitignore  AI_DISCLOSURE.md  Makefile  README.md  SUBMISSION_CHECKLIST.md
chairman-counterexample/: Makefile  README.md
planar-cost-lower-bound/: README.md
subtree-shuffling-counterexample/: CITATION.cff  Makefile  PROVENANCE.md  README.md  REVIEW_CHECKLIST.md  STATUS.md  pyproject.toml  requirements.txt
subtree-shuffling-counterexample/derivation/: 00-overview.md  01-normalization-and-hidden-cubic.md  02-weighted-horner-suspension.md  03-inverse-coefficient.md  04-tree-separator.md
subtree-shuffling-counterexample/paper/: README.md  cover_letter_template.md  subtree_shuffling_counterexample.tex
subtree-shuffling-counterexample/scripts/: run_all.sh
subtree-shuffling-counterexample/src/shuffle_counterexample/: __init__.py  certificates.py  horner.py  maps.py  verify.py
subtree-shuffling-counterexample/tests/: test_claim_scope.py  test_coefficients.py  test_horner.py  test_maps.py
(+44 files in other folders)
